# hackathon-ii-todo-evolution

./: .gitignore  AGENTS.md  BONUS_FEATURE.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  FINAL_SUBMISSION_PREP.md  FINAL_TESTING_CHECKLIST.md  GITHUB_SETUP.md  IMPROVEMENT_PLAN.md  LINKEDIN_POST.md  PHASE1_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  QUICK_WINS_IMPLEMENTATION.md  QUICK_WINS_MANUAL_TEST.md  QUICK_WINS_TEST_REPORT.md  README.md  SECURITY.md  SUBMISSION_CHECKLIST.md  TESTING_CHECKLIST.md  VERCEL_DEPLOYMENT_STEPS.md  constitution.md  main.py  pyproject.toml
phase-2-web/backend/: .env.example  AUTONOMOUS_TESTING_REPORT.md  CHATKIT_FINAL_STATUS.md  CHATKIT_FIXES_SUMMARY.md  CHATKIT_STATUS.md  CHAT_AUTH_FIX.md  CLAUDE.md  FINAL_SUBMISSION_REPORT.md  MIGRATION_TO_OFFICIAL_SDKS.md  OPENAI_AGENTS_SDK_MIGRATION_COMPLETE.md  PHASE3_VALIDATION_COMPLETE.md  PHASE_III_TESTING_SUMMARY.md  PLAYWRIGHT_INTEGRATION_COMPLETE.md  PLAYWRIGHT_MCP_SETUP.md  README.md  create_test_user_better_auth.py  pyproject.toml  requirements.txt  run_migration.py  start_server.sh  test_api_comprehensive.py  test_chat_full_workflow.py  test_chat_with_playwright.py  test_core_mcp_tools.py  test_minimal_chatkit.py  test_new_features.py  test_openai_agents_sdk.py  test_playwright_tools.py  test_quick_wins.py
phase-2-web/backend/app/: database.py  main.py
phase-2-web/backend/migrations/: 001_create_tasks_table.sql  002_create_categories_table.sql  003_add_category_to_tasks.sql  004_add_task_enhanced_fields.sql  005_add_task_sort_order.py  005_add_time_tracking.sql  006_add_templates_and_notifications.sql  (+3 more)
(+366 files in other folders)
