[project]
name = "todo-backend"
version = "1.0.0"
description = "FastAPI backend for web-based todo application"
requires-python = ">=3.13"
readme = "README.md"
authors = [
    { name = "Ahtisham", email = "ahtisham@example.com" }
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sqlmodel>=0.0.27",
    "psycopg2-binary>=2.9.0",
    "passlib[bcrypt]>=1.7.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "bcrypt>=5.0.0",
    "authlib>=1.3.0",
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "mcp==1.25.0",
    "openai-chatkit==1.4.1",
    "openai-agents>=0.6.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
